# c-homework4

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
